[amazonechocontrol] improve servlets and remove UnsupportedEncodingException (#284)
* [amazonechocontrol] improve servlets and remove UnsupportedEncodingException

Signed-off-by: Jan N. Klug <github@klug.nrw>